Fixed overlapping figcaption in gallery

--- a/style.css
+++ b/style.css
@@ -719,7 +719,7 @@ input.voucher-code-button {
         bottom: 0;
         left: .75em;
         right: .75em;
-        width: inherit; } }
+        width: auto; } }
     .slide figcaption h3 {
       font-size: 1.5em;
       line-height: 1.125;
